# octo-happiness-rust

./: Cargo.toml  Containerfile  LICENSE  README.md
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: _helpers.tpl  deploymentconfig.yaml  pipeline-sa.yaml  pipeline-workspace-pvc.yaml  pipeline.yaml  pipelinerun.yaml  service-mesh-destinationrule.yaml  service-mesh-gateway.yaml  service-mesh-virtualservice.yaml  service.yaml
kubernetes/: deployment.yml  gateway.yml
src/: client.rs  server.rs
